# mia-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build_all.sh  flake.nix  flake.old.nix  nixpkgs-package.nix  package.nix  result
.github/workflows/: draft-release.yml
benchmark/: issues.md  test_questions.md
images/: mia.cast
src/: agent_loop.rs  agent_tools.rs  api.rs  cli.rs  config.rs  gateway.rs  legacy_tui.rs  main.rs  ratatuitui.rs  sessions.rs  setup.rs  system_prompt.rs  tui.rs  utils.rs
src/agent_tools/: datetime.rs  doc_convert.rs  doc_create.rs  exec_python.rs  exec_shell.rs  file_list.rs  file_read.rs  file_search.rs  file_write.rs  fs_grep_files.rs  fs_list_dir.rs  fs_read_file.rs  fs_search_dirs.rs  fs_write_file.rs  memory.rs  python.rs  shell.rs  web_extract.rs  web_search.rs
src/gateway/: whatsapp.rs
src/legacy_tui/: custom_reedline.rs
src/tui/: custom_reedline.rs
testing/: sample.adoc  sample.md  sample.tex
