[package]
name = "mia-agent"
description = "Your personal AI assistant"
# Next major version when gateways are introduced
version = "0.1.0"
license = "MIT"
edition = "2024"

[[bin]]
name = "mia"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
# colored = "3.1.1"
config = { version = "0.15.23", features = ["toml"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
indoc = "2.0.7"
itertools = "0.14.0"
log = "0.4.30"
nu-ansi-term = "0.50.3"
os_info = "3.15.0"
qrcode = "0.14.1"
reedline = "0.48.0"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
rust_decimal = "1.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = "5.3.0"
tabled = "0.21.0"
termimad = "0.34.1"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
# wacore = "0.6.0"
# waproto = "0.6.0"
# whatsapp-rust = "0.6.0"
# whatsapp-rust-sqlite-storage = "0.6.0"
# whatsapp-rust-tokio-transport = "0.6.0"
# whatsapp-rust-ureq-http-client = "0.6.0"
which = "8.0.3"
