[package]
name = "mia-agent"
description = "The configurable, easy to use, personal AI agent."
license = "MIT"
edition = "2024"
version = "0.1.2"
authors = ["Mathew Manoj<mathewmanojma3@gmail.com>"]
repository = "https://github.com/mastermach50/mia-agent"
categories = ["command-line-utilities", "artificial-intelligence"]
keywords = ["ai-agent"]

[[bin]]
name = "mia"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytesize = "2.4.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
config = { version = "0.15.23", features = ["toml"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
indoc = "2.0.7"
inquire = "0.9.4"
inquire-derive = "0.9.4"
itertools = "0.14.0"
log = "0.4.30"
nu-ansi-term = "0.50.3"
os_info = "3.15.0"
reedline = "0.48.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
rust_decimal = "1.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = "5.3.0"
tabled = "0.21.0"
termimad = "0.34.1"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
toml_edit = "0.25.12"
unix_mode = "0.1.4"
which = "8.0.3"

[target.'cfg(unix)'.dependencies]
uzers = "0.12.2"
